--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                         conhecer!</a>
                 </div>
 
+            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" class="img-fluid img-inicio">
             </div>
+            
         </section>
 
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
@@ -50,7 +52,7 @@
                         brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
                         abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
                         teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop.</p>
+                        influências estrangeiras, especialmente do rock e da música pop.Fonte site Toda matéria.</p>
                 </div>
             </div>
         </section>
