--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                         conhecer!</a>
                 </div>
 
-            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" class="img-fluid img-inicio">
+            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" alt="A imagem apresenta o grupo musical Os Mutantes. São três pessoas cantando em dois microfones" title="Os Mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+        "img-fluid img-inicio">
             </div>
-            
+
         </section>
 
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
